# Common

./: README.md
MFBufferLib/: CMakeLists.txt
MFBufferLib/include/MF/: MFBuffer.h
MFByteStreamLib/: CMakeLists.txt
MFByteStreamLib/include/MF/: ByteStreamReader.h  ByteStreamWriter.h
MFEndianUtilsLib/: CMakeLists.txt
MFEndianUtilsLib/include/MF/: EndianConverter.h  EnumEndianType.h
MFEndianUtilsLib/src/MF/: EndianConverter.cpp
